# whisper-paste

./: CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: audio.rs  config.rs  main.rs  overlay.rs  paste.rs  transcribe.rs
