[package]
name = "whisper-paste"
version = "0.1.0"
edition = "2021"
description = "Record voice, transcribe with Whisper, paste anywhere"
license = "MIT"
repository = "https://github.com/tbit-io/whisper-paste"

[dependencies]
cpal = "0.15"
hound = "3.5"
arboard = "3"
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
device_query = "2"
dirs = "6"
toml = "0.8"
enigo = "0.3"
eframe = "0.30"

[profile.release]
opt-level = "s"
lto = true
strip = true
